memperbaiki text yang overflow di screen hp

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -110,6 +110,11 @@ body {
   margin-left: 30%;
 }
 
+.text-index {
+  z-index: 100;
+  position: relative;
+}
+
 /* media query */
 @media only screen and (max-width: 992px) {
   .cta {
@@ -120,5 +125,9 @@ body {
   }
   .navbar-nav {
     margin-left: 0;
+  }
+  .text-index {
+    z-index: 0;
+    position: static;
   }
 }
